--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,43 @@
-language: ruby
-rvm:
-  - 2.0
-  - 2.1
-  - 2.2
-  - ruby-head
-  - rbx-2
+sudo: required
+dist: trusty
+language: c
+addons:
+  apt:
+    packages:
+      - realpath
+notifications:
+  email:
+    - tj+travis_mmve@a13.fr
+  on_success: never
+
+env:
+  - RUBYVER=2.4-stable
+  - RUBYVER=2.3-stable
+  - RUBYVER=2.2-stable
+  - RUBYVER=2.1-stable
+cache:
+  directories:
+    - ${HOME}/.gem/travis
+    - ${HOME}/usr
+  timeout: 3600
+
+before_install:
+  - sudo apt-get --purge remove ruby\*
+  - rm -rf ~/.bash*
+  - unset gem GEM_HOME GEM_PATH RUBYOPT IRBRC
+  - export PATH=/bin:/usr/bin RB=$HOME/usr/bin/ruby
+  - test -x $RB || wget http://ftp.ruby-lang.org/pub/ruby/ruby-${RUBYVER}.tar.xz
+  - test -x $RB || tar xfJ ruby-*.tar.xz
+  - test -x $RB || cd ruby-*
+  - test -x $RB || ./configure --prefix=$HOME/usr --disable-install-doc --with-out-ext=tk
+  - test -x $RB || (make && make install)
+  - echo "source 'https://rubygems.org'; gemspec" > ~/spec_deps.rb
+install:
+  - unset gem GEM_HOME GEM_PATH RUBYOPT IRBRC
+  - export GEM_HOME=~/.gem/travis GEM_PATH=~/.gem/travis
+  - export PATH=$GEM_HOME/bin:$HOME/usr/bin:/bin:/usr/bin
+  - cd $TRAVIS_BUILD_DIR
+  - gem install -g ~/spec_deps.rb
+script:
+  - export RUBYOPT=-I$(realpath lib)
+  - rake
