Improve test command output on travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,4 @@ install:
   - cd $TRAVIS_BUILD_DIR
   - gem install -g ~/spec_deps.rb
 script:
-  - export MMVE_CI=yes
-  - export RUBYOPT=-I$(realpath lib)
-  - rake
+  - MMVE_CI=yes RUBYOPT=-I$(realpath lib) rake
